--- a/src/template.html
+++ b/src/template.html
@@ -6,10 +6,63 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8iEl9-RhvtdNM-qXHgPISXtaCAp7gqcQ" async defer></script>
+    <style type="text/css">
+    html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;  
+}
+
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #e9e9e9;
+}
+.loader {
+	margin:0 auto;
+  color: #4684ee;
+  font-family: Consolas, Menlo, Monaco, monospace;
+  font-weight: bold;
+  font-size: 30vh;
+  opacity: 0.8;
+}
+.loader span {
+  display: inline-block;
+  -webkit-animation: pulse 0.4s alternate infinite ease-in-out;
+          animation: pulse 0.4s alternate infinite ease-in-out;
+}
+.loader span:nth-child(odd) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+@-webkit-keyframes pulse {
+  to {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+    opacity: 0.5;
+  }
+}
+@keyframes pulse {
+  to {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+    opacity: 0.5;
+  }
+}
+
+
+
+  </style>
 </head>
 <body>
   <div class="container">
-    <div id="app">Loading...</div>
+    <div id="app">
+  		<div class="loader">
+  			<span>{</span><span>}</span>
+		</div>
+	</div>
   </div>
 </body>
 
